virtualservices/api-example-com-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: api-example-com
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com:81'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-world-cities-soap-service-8080
            namespace: gloo-system
      optionsConfigRefs:
        delegateOptions:
        - name: world-cities
          namespace: default
